platforms/vps-k8s/kustomize/base/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - port: 80
      targetPort: 80
